[package]
name = "codeowners"
version = "0.1.2"
authors = ["Steve Dignam <steve@dignam.xyz>"]
license = "BSD-2-Clause"
description = "A Python library to parse codeowner files"
repository = "https://github.com/sbdchd/codeowners"
readme = "README.md"
keywords = ["codeowners"]
edition = "2018"

[lib]
name = "codeowners"
crate-type = ["cdylib"]

[dependencies]
codeowners = "0.1.3"

[dependencies.pyo3]
version = "0.7.0"

# weird linking issues with `cargo test`
# see:
# - https://github.com/PyO3/pyo3/issues/341
# - https://pyo3.rs/v0.7.0-alpha.1/advanced.html#testing
[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
