[package]
name = "codeowners"
version = "0.1.3"
authors = ["Steve Dignam <steve@dignam.xyz>"]
license = "BSD-2-Clause"
description = "A Python library to parse codeowner files"
repository = "https://github.com/sbdchd/codeowners"
readme = "README.md"
keywords = ["codeowners"]
edition = "2018"

[lib]
name = "codeowners"
crate-type = ["cdylib"]

[dependencies]
codeowners = "0.1.3"

[dependencies.pyo3]
version = "0.8.3"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
