[tool.poetry]
name = "codeowners"
version = "0.1.3"
description = "Codeowners parser for Python via Rust"
authors = ["Steve Dignam <steve@dignam.xyz>"]
repository = "https://github.com/sbdchd/codeowners"
readme = "README.md"
license = "MIT"
keywords = ["codeowners", "pyo3", "rust"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pyo3-pack = "^0.6.1"
twine = "^1.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
