[tool.poetry]
name = "codeowners"
version = "0.2.0"
description = "Codeowners parser for Python"
authors = ["Steve Dignam <steve@dignam.xyz>"]
repository = "https://github.com/sbdchd/codeowners"
readme = "README.md"
license = "MIT"
keywords = ["codeowners", "git", "github"]

[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = "^3.7"

[tool.poetry.dev-dependencies]
twine = "^1.13"
wheel = "^0.36.1"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
mypy = "^0.800.0"
isort = "^5.7"
flake8 = "^3.8"
pytest = "6.2.1"
ipython = "6.4"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
